# simulator

./: .buildinfo  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  .rhiza.history  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  Taskfile.yml  _config.yml  coverage.sh  create_kernel.sh  cvxsimulator-0.7.6-py3-none-any.whl  cvxsimulator-0.7.7-py3-none-any.whl  cvxsimulator-0.7.8-py3-none-any.whl  cvxsimulator-0.7.9-py3-none-any.whl  cvxsimulator-0.8.0-py3-none-any.whl  cvxsimulator-0.8.1-py3-none-any.whl  cvxsimulator-0.8.10-py3-none-any.whl  cvxsimulator-0.8.11-py3-none-any.whl  cvxsimulator-0.8.12-py3-none-any.whl  cvxsimulator-0.8.13-py3-none-any.whl  cvxsimulator-0.8.14-py3-none-any.whl  cvxsimulator-0.8.15-py3-none-any.whl  cvxsimulator-0.8.16-py3-none-any.whl  cvxsimulator-0.8.17-py3-none-any.whl  cvxsimulator-0.8.18-py3-none-any.whl  cvxsimulator-0.8.2-py3-none-any.whl  cvxsimulator-0.8.3-py3-none-any.whl  cvxsimulator-0.8.4-py3-none-any.whl  cvxsimulator-0.8.5-py3-none-any.whl  cvxsimulator-0.8.5rc1-py3-none-any.whl  cvxsimulator-0.8.6-py3-none-any.whl  cvxsimulator-0.8.7-py3-none-any.whl  (+37 more)
.binder/: Dockerfile
.claude/commands/: rhiza_quality.md  rhiza_release.md  rhiza_update.md
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/: devcontainer.json  startup.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  renovate.json  template.yml
.github/rhiza/: template.yml
.github/scripts/: marimushka.sh
.github/taskfiles/: cleanup.yml  docs.yml
.github/workflows/: basic.yml  binder.yml  book.yml  book2.yml  build.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  count.yml  deptry.yml  marimo.yml  pre-commit.yml  release.yml  renovate_rhiza_sync.yml  rhiza_benchmark.yml  rhiza_benchmarks.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_deptry.yml  rhiza_docker.yml  rhiza_fuzzing.yml  rhiza_marimo.yml  rhiza_mutation.yml  rhiza_release.yml  rhiza_scorecard.yml  rhiza_security.yml  rhiza_sync.yml  rhiza_validate.yml  rhiza_weekly.yml  setup-python-environment.yml  sphinx.yml  structure.yml  sync.yml  test.yml
.rhiza/: .env  .rhiza-version.rej  CONTRIBUTING.md  Makefile.rhiza  history  rhiza.mk  template.yml
.rhiza/completions/: README.md
.rhiza/make.d/: bootstrap.mk  completions.mk  quality.mk  releasing.mk  test.mk
.rhiza/requirements/: docs.txt  tests.txt
.rhiza/tests/: README.md  conftest.py
.rhiza/utils/: pip_audit_policy.py  suppression_audit.py  suppression_parse.py  suppression_report.py
_sources/docs/: api.md  index.md  reports.md
artifacts/lines/: lines.txt
artifacts/sphinx/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  searchindex.js
artifacts/tests/: coverage
book/: .buildinfo  Makefile.book  README.md  _config.yml  _toc.yml  genindex.html  objects.inv  search.html  searchindex.js
book/docs/: api.html  api.md  index.html  index.md  marimo.html  marimo.md  nb.html  reports.html  reports.md
book/marimo/: Balanced.py  OneAssetFadingOut.py  monkey.py  pairs.py
book/sphinx/: conf.py
cvx/simulator/: EquityPortfolio.py  __init__.py  builder.py  grid.py  interpolation.py  metrics.py  month.py  plot.py  portfolio.py  shifter.py  state.py  synthetic.py  trading_costs.py  types.py
docs/: api.html  conf.py  index.html  index.rst  nb.html  reports.html
docs/development/: MARIMO.md
docs/notebooks/: capacity.html  demo.html  difference.html  monkey.html  pairs.html  quantstats.html
examples/: stephen.py  thomas.py
experiment/: monkey.py  xxplotly.py
experiments/: monkey1.py
lines/: lines.txt
marimo/: Balanced.html  Balanced.md  OneAssetFadingOut.html  OneAssetFadingOut.md  monkey.html  monkey.md  pairs.html  pairs.md
marimo-html/: OneAssetFadingOut.html  monkey.html  pairs.html
pdoc/: cvx.html  search.js
pdoc/cvx/: simulator.html
quantstats-main/: .gitignore  MANIFEST.in  comments.txt  requirements.txt  setup.py
quantstats-main/quantstats/: __init__.py  plots.py  report.html  reports.py  stats.py  utils.py
sphinx/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree  license.doctree
sphinx/_modules/: index.html
sphinx/autoapi/: index.html
src/cvxsimulator/: __init__.py  portfolio.py  state.py
src/tests/: conftest.py  test_builder.py  test_conftest.py  test_docs.py  test_doctest.py  test_env.py  test_polars.py  test_portfolio.py  test_portfolio_validation.py  test_readme_doctest.py  test_state.py  test_state_validation.py  test_version.py
taskfiles/: build.yml  docs.yml  quality.yml
tests/: conftest.py  stephen.py  test_builder.py  test_builder_validation.py  test_case.py  test_conftest.py  test_docs.py  test_doctest.py  test_grid.py  test_interpolation.py  test_metrics.py  test_month.py  test_pandas.py  test_polars.py  test_portfolio.py  test_portfolio_abc.py  test_portfolio_validation.py  test_readme_doctest.py  test_state.py  test_state_abc.py  test_state_validation.py  test_taskfile.py  test_trading_costs.py  test_version.py  thomas.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/fuzz/: fuzz_interpolation.py
tests/html-coverage/: class_index.html  d_0c0734a4b0a8f77b___init___py.html  d_0c0734a4b0a8f77b_state_py.html  d_329724b8aec86853___init___py.html  d_329724b8aec86853_builder_py.html  d_329724b8aec86853_portfolio_py.html  d_329724b8aec86853_state_py.html  d_3c016727c14c05ac___init___py.html  d_3c016727c14c05ac_builder_py.html  (+58 more)
tests/resources/: nav.csv  (+9 more)
web/: app.py
(+414 files in other folders)
