# Project metadata and core configuration
[project]
name = "cvxsimulator"
version = "0.0.0"
description = "Simple simulator for investors"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jquantstats>=0.0.29",
    "numpy>=2.3.4",
    "pandas>=2.2.3",
    "polars>=1.34.0"
]

# Links to project resources
[project.urls]
repository = "https://github.com/cvxgrp/simulator"

# Additional dependencies for development, testing, and documentation
[project.optional-dependencies]
dev = [
    "cvxpy-base>=1.7.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "clarabel>=0.9.0",
    "loguru",
    "tinycta",
    "marimo>=0.17.0"
]

# Build system configuration
# Hatchling is a modern, extensible Python build backend
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuration for building wheel distributions
# Specifies which packages to include in the wheel
[tool.hatch.build.targets.wheel]
packages = ["src/cvx"]

# Deptry configuration for dependency checking
# Specific rule ignores for dependency checking
[tool.deptry.per_rule_ignores]
DEP002 = ["jquantstats"]

# General Deptry configuration
# Deptry is a tool for checking dependency usage in Python projects
[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]
