# Project metadata and core configuration
[project]
name = "cvxsimulator"
version = "0.0.0"
description = "Simple simulator for investors"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
# Private :: Do Not Upload (prevents rhiza_release.yml from publishing to PyPI)
dependencies = [
    "jquantstats>=0.0.29",
    "numpy>=2.3.4",
    "pandas>=2.2.3",
    "polars>=1.34.0"
]

# Links to project resources
[project.urls]
repository = "https://github.com/cvxgrp/simulator"

# Additional dependencies for development, testing, and documentation
[dependency-groups]
dev = [
    "cvxpy-base>=1.7.0",
    "clarabel>=0.9.0",
    "loguru",
    "tinycta",
    "marimo>=0.17.0",
    "plotly>=6.5",
]

# Build system configuration
# Hatchling is a modern, extensible Python build backend
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuration for building wheel distributions
# Specifies which packages to include in the wheel
[tool.hatch.build.targets.wheel]
packages = ["src/cvx"]

# Deptry configuration for dependency checking
# Map package names to their module names to suppress warnings
[tool.deptry.package_module_name_map]
cvxpy-base = "cvxpy"
jquantstats = "jquantstats"
numpy = "numpy"
pandas = "pandas"
polars = "polars"
clarabel = "clarabel"
loguru = "loguru"
tinycta = "tinycta"
marimo = "marimo"
plotly = "plotly"

# Specific rule ignores for dependency checking
[tool.deptry.per_rule_ignores]
#DEP002 = ["jquantstats"]
DEP001 = ["cvx", "cvxpy"]

# MyPy configuration for type checking
[tool.mypy]
ignore_missing_imports = true

