# Project metadata and core configuration
[project]
name = "cvxsimulator"
version = "1.5.3"
description = "Simple simulator for investors"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
# `Private :: Do Not Upload` keeps rhiza_release.yml from publishing to PyPI.
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Private :: Do Not Upload",
]
dependencies = [
    "jquantstats>=0.6.5",
    "numpy>=2.3.4",
    "pandas>=2.2.3",
    "polars>=1.34.0",
    "pyarrow>=19.0.0"
]

# Links to project resources
[project.urls]
Homepage = "https://github.com/cvxgrp/simulator"
Repository = "https://github.com/cvxgrp/simulator"

# Additional dependencies for development, testing, and documentation
[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[dependency-groups]
dev = [
    "cvxpy-base>=1.7.0",
    "clarabel>=0.9.0",
    "loguru",
    "tinycta>=0.5.0",
    "marimo>=0.17.0",
    "plotly>=6.5",
]
test = [
    "pytest>=7.0",
]
lint = []

# Build system configuration
# Hatchling is a modern, extensible Python build backend
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuration for building wheel distributions
# Specifies which packages to include in the wheel
[tool.hatch.build.targets.wheel]
packages = ["src/cvx"]

# Deptry configuration for dependency checking
# Map package names to their module names to suppress warnings
[tool.deptry.package_module_name_map]
cvxpy-base = "cvxpy"
jquantstats = "jquantstats"
numpy = "numpy"
pandas = "pandas"
polars = "polars"
clarabel = "clarabel"
loguru = "loguru"
tinycta = "tinycta"
marimo = "marimo"
plotly = "plotly"

# Specific rule ignores for dependency checking
[tool.deptry.per_rule_ignores]
#DEP002 = ["jquantstats"]
DEP001 = ["cvx", "cvxpy"]
DEP002 = ["pyarrow", "pytest"]

# MyPy configuration for type checking
[tool.mypy]
ignore_missing_imports = true

